SID 508/consume eni events (#17)
* Added ENI handler logic

* Updated README

* Leaned in to using an empty changes array to show a no-op

Updated tests to support, made the field explicitly nullable so that valid cases will no longer fail response validation
