# pkg/handlers/v1/transformer.go
@@ -64,6 +64,9 @@ type Change struct {
 	// Hostnames show changed public DNS names
 	Hostnames []string `json:"hostnames,omitempty"`
 
+	// RelatedResources show a related arn_id. ex: an ELB the ENI is attached to
+	RelatedResources []string `json:"relatedResources,omitempty"`
+
 	// ChangeType indicates the type of change which occurred. Allowed values are "ADDED" or "DELETED"
 	ChangeType string `json:"changeType"`
 }
@@ -100,6 +103,8 @@ func (t *Transformer) Handle(ctx context.Context, input Input) (Output, error) {
 	case configservice.ResourceTypeAwsElasticLoadBalancingV2LoadBalancer:
 		// ALB Config events have the same as ELBs
 		output, err = transformOutput(event, elbTransformer{})
+	case configservice.ResourceTypeAwsEc2NetworkInterface:
+		output, err = transformOutput(event, eniTransformer{})
 	default:
 		t.LogFn(ctx).Info(logs.UnsupportedResource{Resource: event.ConfigurationItem.ResourceType})
 	}
